white bottom fix

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .mobile-screen {
-    @apply lg:max-w-md mx-auto  px-6 text-white;
+    @apply lg:max-w-md mx-auto h-full px-6 text-white;
   }
   .form-validation {
     @apply focus:outline-none focus:border-[#55BB6C] focus:ring-1 focus:ring-[#55BB6C]
@@ -20,6 +20,7 @@
 /* Hide scrollbar for Chrome, Safari and Opera */
 body {
   height: 100dvh;
+  height: 100svh;
   margin: 0;
   min-width: 320px;
   color: whitesmoke;
@@ -30,7 +31,7 @@ body {
 /* background-color: #000000; */
 
 .mobile-screen {
-  height: 100dvh;
+  height: 100%;
 }
 
 :root {
