--- a/app/src/index.css
+++ b/app/src/index.css
@@ -20,7 +20,7 @@
 /* Hide scrollbar for Chrome, Safari and Opera */
 body {
   height: 100dvh;
-  height: 100svh;
+  min-height: -webkit-fill-available;
   margin: 0;
   min-width: 320px;
   color: whitesmoke;
