--- a/app/src/index.css
+++ b/app/src/index.css
@@ -20,7 +20,7 @@
 /* Hide scrollbar for Chrome, Safari and Opera */
 body {
   height: 100dvh;
-  min-height: -webkit-fill-available;
+  /* min-height: -webkit-fill-available; */
   margin: 0;
   min-width: 320px;
   color: whitesmoke;
@@ -28,10 +28,6 @@ body {
   overflow-y: hidden;
   padding: 0;
   background-color: #000000;
-}
-
-.mobile-screen {
-  height: 100%;
 }
 
 :root {
