--- a/app/src/index.css
+++ b/app/src/index.css
@@ -75,6 +75,10 @@ a:hover {
   object-fit: fill;
 }
 
+.qr-code svg {
+  height: inherit;
+}
+
 .asset-btn {
   background: linear-gradient(
       0deg,
