--- a/app/src/index.css
+++ b/app/src/index.css
@@ -69,7 +69,9 @@ a:hover {
   /* position: relative !important; */
   display: none;
 }
-
+.qr-code svg{
+  height:inherit;
+}
 .qr-scanner video {
   /* position: relative !important; */
   object-fit: fill;
