added kotanipay withdraw

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -69,14 +69,13 @@ a:hover {
   /* position: relative !important; */
   display: none;
 }
-.qr-code svg{
-  height:inherit;
+.qr-code svg {
+  height: inherit;
 }
 .qr-scanner video {
   /* position: relative !important; */
   object-fit: fill;
 }
-
 
 .qr-code svg {
   height: inherit;
@@ -154,7 +153,7 @@ input:focus {
   position: fixed; /* Sit on top of the screen */
   z-index: 1; /* Add a z-index if needed */
   left: 50%; /* Center the snackbar */
-  bottom: 30px; /* 30px from the bottom */
+  bottom: 10%; /* 10% from the bottom */
 }
 
 /* Show the snackbar when clicking on a button (class added with JavaScript) */
