made copy img bigger

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -151,9 +151,9 @@ input:focus {
   border-radius: 2px; /* Rounded borders */
   padding: 16px; /* Padding */
   position: fixed; /* Sit on top of the screen */
-  z-index: 1; /* Add a z-index if needed */
+  z-index: 5; /* Add a z-index if needed */
   left: 50%; /* Center the snackbar */
-  bottom: 10%; /* 10% from the bottom */
+  bottom: 50%; /* 10% from the bottom */
 }
 
 /* Show the snackbar when clicking on a button (class added with JavaScript) */
@@ -168,44 +168,44 @@ input:focus {
 /* Animations to fade the snackbar in and out */
 @-webkit-keyframes fadein {
   from {
-    bottom: 0;
+    /* bottom: 0; */
     opacity: 0;
   }
   to {
-    bottom: 30px;
+    /* bottom: 30px; */
     opacity: 1;
   }
 }
 
 @keyframes fadein {
   from {
-    bottom: 0;
+    /* bottom: 0; */
     opacity: 0;
   }
   to {
-    bottom: 30px;
+    /* bottom: 30px; */
     opacity: 1;
   }
 }
 
 @-webkit-keyframes fadeout {
   from {
-    bottom: 30px;
+    /* bottom: 30px; */
     opacity: 1;
   }
   to {
-    bottom: 0;
+    /* bottom: 0; */
     opacity: 0;
   }
 }
 
 @keyframes fadeout {
   from {
-    bottom: 30px;
+    /* bottom: 30px; */
     opacity: 1;
   }
   to {
-    bottom: 0;
+    /* bottom: 0; */
     opacity: 0;
   }
 }
